# DualModelReactor-LF

./: .gitignore  .gitpod.yml  CMakeLists.txt  WaferPipeline.lf  analyze_predictions.py  cmake_install.cmake  dual_model_diagram.md  plot_predictions.py  predictions_log.csv  run_all_steps.py  stepwise_predictions.csv  train_dummy_models.py  wafer_log.csv
core/: Makefile  cmake_install.cmake
include/DualModelReactor/: DigitalTwinMonitor.h  DualModelReactor.h  Logger.h  ScrapHandler.h
models/: model_step_-1_D1.pkl  model_step_-2_D1.pkl  model_step_1_D1.pkl  model_step_2_D1.pkl  model_step_4_D1.pkl  model_step_6_D1.pkl  model_step_7_D1.pkl
src/: DualModelReactor.lf  model_predictor.py  send_wafer_input.py
src-gen/DualModelReactor/: CMakeLists.txt  DualModelReactor.c  _controller.c  _controller.h  _digitaltwinmonitor.c  _digitaltwinmonitor.h  _dualmodelreactor_main.c  _dualmodelreactor_main.h  _logger.c  _logger.h  _scraphandler.c  _scraphandler.h  _smartpredictor.c  _smartpredictor.h  _waferiterator.c  _waferiterator.h
src-gen/DualModelReactor/include/DualModelReactor/: Controller.h  SmartPredictor.h  WaferIterator.h
